[fix] 取消样式的css-module重命名

--- a/.babelrc
+++ b/.babelrc
@@ -12,7 +12,7 @@
 					}
 				},
 				"webpackHotModuleReloading": true,
-				"generateScopedName": "[name]__[local]__[hash:base64:5]",
+				"generateScopedName": "[local]",
 				"exclude": "node_modules"
 			}
 		]
